-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0
-
None
-
Windows 7, GDB 7.8, MinGW32
-
cbd6985693cdb8289142cf7f447aa15f3de18070
Debugging a local application that runs over 40 seconds pops a "GDB not responding" message.
I've noticed the following line in the log, which might be related:
ERROR: UNEXPECTED STATE: 14 WANTED: 10 IN D:\Projects\qt-creator\qt-creator\src\plugins\debugger\gdb\gdbengine.cpp:1768
- replaces
-
QTCREATORBUG-12323 GDB timeout
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-14350 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
123320,4 | Debugger: Use qtHookData to extract Qt version when possible | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
143119,2 | Debugger: Consider reason-less stop on Windows as terminal sigtrap | 3.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |