Debugger: Consider reason-less stop on Windows as terminal sigtrap

Task-number: QTCREATORBUG-14350
Change-Id: I1d7af5f9c91cfbe43127e06d0bb7faddded4ccf6
Reviewed-by: hjk <hjk@theqtcompany.com>